tests/errors/source/short_missing_substitution_bracket.rs
use duplicate::*;
#[duplicate_item(
	ident1 ident2;
	sub1 sub2;
)]//duplicate_end
pub struct name(ty);
//item_end
